# SRW

./: CMakeLists.txt  graphs.py  graphs_prime.py  requirements.txt  srw.ipynb  srw.py  srw2.py  stat.py
include/: PellsEquations.hpp  QuadraticIrrationals.hpp
src/: PellsEquations.cpp  QuadraticIrrationals.cpp  testPells.cpp  testPeriods.cpp
